# robotos

./: .gitignore  .travis.yml  LICENSE.md  README.md  install_ros.sh
apps/Browser.app/: main.py  requirements.txt
apps/Browser.app/src/: os.py  pyqt5.py  sys.py
apps/Docs.app/: main.py
apps/GitHub.app/: main.py
apps/Mine Sweeper.app/: main.py
apps/Mines.app/: main.py
apps/Money.app/: main.py
apps/Notepad.app/: main.py
apps/Settings.app/: main.py
apps/Settings.app/resources/: MARK.agc
research/.ipynb_checkpoints/: Robot Algorithm - Search-checkpoint.ipynb
samples/src/bluebot/: README.md
samples/src/bluebot/src/: bluebot.ino
samples/src/dummybot/include/: localization.h
src/brain/: CMakeLists.txt  package.xml
src/brain/src/: brain.cpp  validate.cpp  validate.h
src/brain_controller/: CMakeLists.txt  package.xml
src/brain_temp/: CMakeLists.txt  package.xml
src/tools/boot/src/h/: brain.h
src/tools/boot/src/reader/: reader.cpp  reader.h
src/tools/geometry/angle/: angle.cpp  angle.h
src/tools/geometry/coordinates/: coordinates.h
src/tools/geometry/coordinates/ang/: ang.cpp
src/tools/geometry/coordinates/vol/: vol.cpp
src/tools/math/: main.cpp
src/tools/math/geometry/coordinates/: coordinates.cpp
src/tools/math/geometry/scalar/: scalar.cpp  scalar.h
src/tools/tcp/: Socket.cpp  Socket.h
src/tools/vector/: vector.h
system/auto/: Makefile
system/auto/src/: Global.h
system/localization/src/localization/: CMakeLists.txt  package.xml
system/localization/src/localization/params/: ukf_template.yaml
system/robot/: detect.py
(+9 files in other folders)
