<?xml version="1.0"?>
<package format="2">
  <name>brain</name>
  <version>1.0.0</version>
  <description>The brain package</description>
  <maintainer email="aaronhma@gmail.com">Aaron Ma</maintainer>
  <license>MIT</license>
  <url type="website">www.aaronhma.com</url>
  <author email="aaronhma@gmail.com">Aaron Ma</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend>
  <doc_depend>doxygen</doc_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
